<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>it.moneyverse</groupId>
    <artifactId>moneyverse-bom</artifactId>
    <version>1.0.0-SNAPSHOT</version>
  </parent>

  <artifactId>moneyverse-lib</artifactId>
  <packaging>pom</packaging>

  <name>moneyverse-lib</name>
  <description>Moneyverse's global third parties dependencies</description>

  <modules>
    <module>moneyverse-account-management</module>
    <module>moneyverse-budget-management</module>
    <module>moneyverse-core</module>
    <module>moneyverse-currency-management</module>
    <module>moneyverse-proto</module>
    <module>moneyverse-test</module>
    <module>moneyverse-transaction-management</module>
      <module>moneyverse-user-management</module>
  </modules>

  <properties>
    <!-- General Settings -->
    <java.version>21</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <skipTests>false</skipTests>
    <!-- Plugin Versions -->
    <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
    <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
    <maven-failsafe-plugin.version>3.5.2</maven-failsafe-plugin.version>
    <maven-jar-plugin.version>3.4.2</maven-jar-plugin.version>
    <maven-javadoc-plugin.version>3.11.1</maven-javadoc-plugin.version>
    <maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
    <!-- Bill of Materials versions -->
    <grpc.version>1.68.2</grpc.version>
    <spring-cloud.version>2024.0.0</spring-cloud.version>
    <spring-boot.version>3.4.0</spring-boot.version>
    <!-- External Dependency Versions -->
    <flyware-core.version>10.15.0</flyware-core.version>
    <grpc-starter.version>3.4.0</grpc-starter.version>
    <grpcmock.version>0.15.0</grpcmock.version>
    <hibernate-jpamodelgen.version>6.6.3.Final</hibernate-jpamodelgen.version>
    <jackson.databind.nullable-version>0.2.6</jackson.databind.nullable-version>
    <keycloak.version>25.0.0</keycloak.version>
    <org.apache.tomcat.annotations-api.version>6.0.53</org.apache.tomcat.annotations-api.version>
    <postgres.version>42.7.4</postgres.version>
    <springdoc-openapi-starter-webmvc-ui.version>2.7.0</springdoc-openapi-starter-webmvc-ui.version>
    <testcontainers-keycloak.version>3.4.0</testcontainers-keycloak.version>
    <testcontainers-kafka.version>1.20.4</testcontainers-kafka.version>
    <!-- Sonar Settings -->
    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
    <sonar.organization>lorenzofratini1998</sonar.organization>
  </properties>

  <dependencyManagement>
    <dependencies>
      <!-- Bill of Materials (BOM) -->
      <dependency>
        <artifactId>grpc-bom</artifactId>
        <groupId>io.grpc</groupId>
        <scope>import</scope>
        <type>pom</type>
        <version>${grpc.version}</version>
      </dependency>
      <dependency>
        <groupId>org.springframework.cloud</groupId>
        <artifactId>spring-cloud-dependencies</artifactId>
        <version>${spring-cloud.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <artifactId>spring-boot-dependencies</artifactId>
        <groupId>org.springframework.boot</groupId>
        <scope>import</scope>
        <type>pom</type>
        <version>${spring-boot.version}</version>
      </dependency>
      <!-- External dependencies -->
      <dependency>
        <groupId>com.github.dasniko</groupId>
        <artifactId>testcontainers-keycloak</artifactId>
        <version>${testcontainers-keycloak.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.tomcat</groupId>
        <artifactId>annotations-api</artifactId>
        <version>${org.apache.tomcat.annotations-api.version}</version>
      </dependency>
      <dependency>
        <groupId>org.flywaydb</groupId>
        <artifactId>flyway-core</artifactId>
        <version>${flyware-core.version}</version>
      </dependency>
      <dependency>
        <groupId>org.flywaydb</groupId>
        <artifactId>flyway-database-postgresql</artifactId>
        <version>${flyware-core.version}</version>
      </dependency>
      <dependency>
        <groupId>org.grpcmock</groupId>
        <artifactId>grpcmock-junit5</artifactId>
        <version>${grpcmock.version}</version>
      </dependency>
      <dependency>
        <groupId>org.grpcmock</groupId>
        <artifactId>grpcmock-spring-boot</artifactId>
        <version>${grpcmock.version}</version>
      </dependency>
      <dependency>
        <groupId>org.hibernate.orm</groupId>
        <artifactId>hibernate-jpamodelgen</artifactId>
        <version>${hibernate-jpamodelgen.version}</version>
      </dependency>
      <dependency>
        <groupId>org.keycloak</groupId>
        <artifactId>keycloak-admin-client</artifactId>
        <version>${keycloak.version}</version>
      </dependency>
      <dependency>
        <groupId>org.openapitools</groupId>
        <artifactId>jackson-databind-nullable</artifactId>
        <version>${jackson.databind.nullable-version}</version>
      </dependency>
      <dependency>
        <groupId>org.postgresql</groupId>
        <artifactId>postgresql</artifactId>
        <version>${postgres.version}</version>
      </dependency>
      <dependency>
        <groupId>org.springdoc</groupId>
        <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
        <version>${springdoc-openapi-starter-webmvc-ui.version}</version>
      </dependency>
      <dependency>
        <groupId>org.testcontainers</groupId>
        <artifactId>kafka</artifactId>
        <version>${testcontainers-kafka.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <configuration>
            <parameters>true</parameters>
            <release>${java.version}</release>
            <source>${java.version}</source>
            <target>${java.version}</target>
            <annotationProcessorPaths>
              <path>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-jpamodelgen</artifactId>
                <version>${hibernate-jpamodelgen.version}</version>
              </path>
            </annotationProcessorPaths>
          </configuration>
          <groupId>org.apache.maven.plugins</groupId>
          <version>${maven-compiler-plugin.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <configuration>
            <archive>
              <manifest>
                <addClasspath>true</addClasspath>
                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
              </manifest>
            </archive>
          </configuration>
          <groupId>org.apache.maven.plugins</groupId>
          <version>${maven-jar-plugin.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <groupId>org.apache.maven.plugins</groupId>
          <version>${maven-surefire-plugin.version}</version>
          <configuration>
            <skipTests>${skipTests}</skipTests>
            <includes>
              <!-- Unit tests -->
              <include>**/*Test.java</include>
              <!-- Integration tests -->
              <include>**/*IT.java</include>
            </includes>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-failsafe-plugin</artifactId>
          <groupId>org.apache.maven.plugins</groupId>
          <version>${maven-failsafe-plugin.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-javadoc-plugin</artifactId>
          <configuration>
            <encoding>${project.reporting.outputEncoding}</encoding>
            <source>${java.version}</source>
          </configuration>
          <groupId>org.apache.maven.plugins</groupId>
          <version>${maven-javadoc-plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.jacoco</groupId>
          <artifactId>jacoco-maven-plugin</artifactId>
          <executions>
            <execution>
              <id>report-aggregate</id>
              <phase>verify</phase>
              <goals>
                <goal>report-aggregate</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

</project>